* Dialer (ECCP): fix behavior when an incoming call is put on hold, and then is
  hung up by the remote side.
* Agent Console: specify explicit font size in CSS to prevent font size from
  varying with the selected theme. Helps fix Elastix bug #1035.
* Agent Console: rewrite script and header inclusion so that javascript.js from
  module is included exactly once. Fixes Elastix bug #1036.
* Dialer (ECCP): allow the "agentlogout" request to cancel a login that is still
  in progress and asking for the agent numeric password.

1.6 (SVN revision 3087)
* Agent Console: complete rewrite.
  This version of the Call Center module has a completely rewritten Agent 
  Console based on the Elastix CallCenter Protocol (ECCP). This rewrite is 
  intended to showcase the capabilities of ECCP and become the reference 
  implementation for an ECCP client. Some highlights of the rewrite:
  - The previous Agent Console polled the webserver every 4 seconds for updates
    on the agent state. This polling gets multiplied by the number of simultaneous
    agents and becomes a heavy burden on the server CPU with more than a few
    tens of agents. The new Agent Console switches to Long Polling 
    (http://en.wikipedia.org/wiki/Push_technology#Long_polling) in which the
    browser is left waiting for a response for up to 2 minutes at a time while
    the server listens to state change events with very little CPU usage. This 
    is made possible thanks to ECCP events. Fixes Elastix bug #114, probably 
    fixes Elastix bugs #412, #489, #637.
  - Agent Console now works correctly in Internet Explorer. Tested with IE6, IE8
    and IE9. Fixes Elastix bug #30.
  - The previous console visual layout is now reimplemented using jQueryUI. This 
    introduces niceties such as decent tabs, dialogs with shading, and themed
    buttons, as well as greatly simplifying and reorganizing the JavaScript
    implementation.
  - The previous Agent Console depends on the agent being willing and able to